[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = {version = "18.0.0", path = "../../jsonrpc/core-client", features = ["wasmhttp"]}
jsonrpc-derive = "18.0.0"
