[package]
name = "score-voting-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
jsonrpc-core-client = {version="18.0.0", path="../../jsonrpc/core-client", features=["wasmhttp"]}
jsonrpc-core = "18.0.0"
wasm-bindgen-futures = "0.4.29"
jsonrpc-derive = "18.0.0"
wasm-logger = "0.2.0"
log = "0.4.14"
common = { path = "../common" }
